--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
+  "name": "dream-lab-backend",
+  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "mssql": "^10.0.2",
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
+  },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "firebase-functions-test": "^3.1.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.0"
   }
 }
