--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "js-sha512": "^0.9.0",
     "mssql": "^10.0.2",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
