--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,15 @@
-# AZURE_SQL_SERVER=dreamlabserver.database.windows.net
-AZURE_SQL_SERVER=dream-lab-tests.database.windows.net
-# AZURE_SQL_DATABASE=dreamLab
-AZURE_SQL_DATABASE=dream-lab-tests
 AZURE_SQL_PORT=1433
 AZURE_SQL_AUTHENTICATIONTYPE=azure-active-directory-password
-# AZURE_SQL_USER=dreamlab_eq5
-AZURE_SQL_USER=dreamlab-test
-# AZURE_SQL_PASSWORD=q7%Hht%H6!
-AZURE_SQL_PASSWORD=y2&s96!39$7m@2^@KaRV
 TOKEN_SECRET=secret
+
+# Entorno de deployment
+# AZURE_SQL_SERVER=dreamlabserver.database.windows.net
+# AZURE_SQL_DATABASE=dreamLab
+# AZURE_SQL_USER=dreamlab_eq5
+# AZURE_SQL_PASSWORD=q7%Hht%H6!
+
+# Entorno de pruebas
+AZURE_SQL_USER=dreamlab-test
+AZURE_SQL_PASSWORD=y2&s96!39$7m@2^@KaRV
+AZURE_SQL_DATABASE=dream-lab-tests
+AZURE_SQL_SERVER=dream-lab-tests.database.windows.net
