--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "express": "^4.19.2",
         "js-sha512": "^0.9.0",
         "jsonwebtoken": "^9.0.2",
         "mssql": "^10.0.2",
