Intento de Fix de instalación de dependencias en azure

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "install": "pip install -r requirements.txt",
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js",
         "dev": "nodemon index.js"
