--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -22,9 +22,23 @@
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.5",
+        "@babel/preset-env": "^7.24.5",
+        "babel-jest": "^29.7.0",
         "dotenv": "^16.4.5",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.0",
+        "supertest": "^7.0.0",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.jsx?$": "babel-jest"
+        },
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     }
 }
