--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "js-sha512": "^0.9.0",
         "jsonwebtoken": "^9.0.2",
         "mssql": "^10.0.2",
+        "node-cron": "^3.0.3",
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
