--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "js-sha512": "^0.9.0",
         "jsonwebtoken": "^9.0.2",
         "mssql": "^10.0.2",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.9.13",
         "yamljs": "^0.3.0"
     },
