--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "docs": "nodemon --watch ./controllers --exec node swagger.js"
+        "docs": "nodemon --watch ./controllers --exec node swagger.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -25,8 +26,8 @@
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.24.5",
-        "@babel/preset-env": "^7.24.5",
+        "@babel/core": "^7.24.6",
+        "@babel/preset-env": "^7.24.6",
         "babel-jest": "^29.7.0",
         "dotenv": "^16.4.5",
         "jest": "^29.7.0",
@@ -34,14 +35,5 @@
         "supertest": "^7.0.0",
         "swagger-autogen": "^2.23.7",
         "swagger-ui-express": "^5.0.0"
-    },
-    "jest": {
-        "transform": {
-            "^.+\\.jsx?$": "babel-jest"
-        },
-        "testEnvironment": "node",
-        "coveragePathIgnorePatterns": [
-            "/node_modules/"
-        ]
     }
 }
