--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "docs": "nodemon --watch ./controllers --exec node swagger.js",
-        "test": "jest"
+        "docs": "nodemon --watch ./controllers --exec node swagger.js"
     },
     "keywords": [],
     "author": "",
@@ -26,8 +25,8 @@
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.24.6",
-        "@babel/preset-env": "^7.24.6",
+        "@babel/core": "^7.24.5",
+        "@babel/preset-env": "^7.24.5",
         "babel-jest": "^29.7.0",
         "dotenv": "^16.4.5",
         "jest": "^29.7.0",
@@ -35,5 +34,14 @@
         "supertest": "^7.0.0",
         "swagger-autogen": "^2.23.7",
         "swagger-ui-express": "^5.0.0"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.jsx?$": "babel-jest"
+        },
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     }
 }
