--- a/.github/workflows/dev_dreamlab-api.yml
+++ b/.github/workflows/dev_dreamlab-api.yml
@@ -4,68 +4,67 @@
 name: Build and deploy Node.js app to Azure Web App - dreamlab-api
 
 on:
-  push:
-    branches:
-      - dev
-  workflow_dispatch:
+    push:
+        branches:
+            - dev
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+        steps:
+            - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+            - name: Set up Node.js version
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "20.x"
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+            - name: npm install, build, and test
+              run: |
+                  npm install
+                  npm run build --if-present
+                  npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+            - name: Zip artifact for deployment
+              run: zip release.zip ./* -r
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: node-app
-          path: release.zip
+            - name: Upload artifact for deployment job
+              uses: actions/upload-artifact@v4
+              with:
+                  name: node-app
+                  path: release.zip
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        environment:
+            name: "Production"
+            url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+        permissions:
+            id-token: write #This is required for requesting the JWT
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
+        steps:
+            - name: Download artifact from build job
+              uses: actions/download-artifact@v4
+              with:
+                  name: node-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4E402BBA3C384C018A81DA2EF39BC86B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_29FC8319A0D04A7A850AC7EB20180CFE }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D0D5B58865594531A5776E669C4366E1 }}
+            - name: Unzip artifact for deployment
+              run: unzip release.zip
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'dreamlab-api'
-          slot-name: 'Production'
-          package: .
-          
+            - name: Login to Azure
+              uses: azure/login@v2
+              with:
+                  client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4E402BBA3C384C018A81DA2EF39BC86B }}
+                  tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_29FC8319A0D04A7A850AC7EB20180CFE }}
+                  subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D0D5B58865594531A5776E669C4366E1 }}
+
+            - name: "Deploy to Azure Web App"
+              id: deploy-to-webapp
+              uses: azure/webapps-deploy@v3
+              with:
+                  app-name: "dreamlab-api"
+                  slot-name: "Production"
+                  package: .
