Update environment variables in .env.development

--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,15 @@
+# API
 AZURE_SQL_PORT=1433
 AZURE_SQL_AUTHENTICATIONTYPE=azure-active-directory-password
+
+# Autenticacion
 TOKEN_SECRET=secret
+
+# Correo
 SMTP_PASSWORD=ecek mwea cude fcxt
 SMTP_SERVER_EMAIL=dreamlab.world.tec@gmail.com
 
-# Entorno de pruebas
+# Base de datos
 AZURE_SQL_USER=dreamlab-test
 AZURE_SQL_PASSWORD=y2&s96!39$7m@2^@KaRV
 AZURE_SQL_DATABASE=dream-lab-tests-9
