Cambios en servicio de correos

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ AZURE_SQL_AUTHENTICATIONTYPE=azure-active-directory-password
 TOKEN_SECRET=secret
 
 # Correo
-SMTP_PASSWORD=ecek mwea cude fcxt
+SMTP_PASSWORD=hwiv wipk jrdv nkec
 SMTP_SERVER_EMAIL=dreamlab.world.tec@gmail.com
 
 # Base de datos
